@@ -8,6 +8,7 @@ import ru.job4j.tracker.output.Output;
 import ru.job4j.tracker.input.ConsoleInput;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class StartUI {
@@ -42,7 +43,7 @@ public class StartUI {
         Output output = new ConsoleOutput();
         Input input = new ValidateInput(output, new ConsoleInput());
         Tracker tracker = new Tracker();
-        List<UserAction> actions = new ArrayList<>(List.of(
+        List<UserAction> actions = Arrays.asList(
                 new CreateAction(output),
                 new FindAllAction(output),
                 new ReplaceAction(output),
@@ -50,9 +51,7 @@ public class StartUI {
                 new FindByIdAction(output),
                 new FindByNameAction(output),
                 new ExitAction(output)
-        )) {
-
-        };
+        );
         new StartUI(output).init(input, tracker, actions);
     }
 }
